Source/Chronozoom.UI/css/cz.css
/* ... */
/* Search Form */
.cz-header-search-form {
  min-width: 380px;
  max-width: 450px;
  width: 30.2734375%;
  bottom: 25px;
  left: 0;
}
.cz-header-search-form > .cz-form-content {
  position: absolute;
  top: 36px;
  right: 0;
  bottom: 0;
  left: 0;
  overflow-y: hidden;
}
.cz-form-progress-bar {
  width: 100%;
  height: 15px;
  vertical-align: top;
  margin-top: 8px;
  margin-bottom: 8px;
}
.cz-form-content-box {
  font-size: 14px;
  font-family: 'Segoe UI', Helvetica, Arial, 'Trebuchet MS', 'San Serif';
  vertical-align: top;
  height: 100%;
}
.cz-form-search-results {
  margin-top: 24px;
  position: relative;
  overflow-y: auto;
  height: 100%;
}
.cz-form-search-section {
  margin-top: 0px;
  margin-bottom: 24px;
}
.cz-form-search-section-title {
  margin-top: 0px;
  color: #232323;
  border-bottom: 1px solid #232323;
}
.cz-form-search-result {
  margin: 8px 0;
  width: auto;
  color: #038ae6;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}
.cz-form-search-results-count {
  color: #232323;
}
/* Tour Caption Form */
.cz-tour-caption-form {
  width: 300px;
  height: 450px;
  top: 91px;
  left: 0;
  z-index: 100000000;
}
.cz-tour-caption-form > .cz-form-content {
  position: absolute;
  top: 36px;
  right: 0;
  bottom: 0;
  left: 0;
  overflow-y: hidden;
}
.cz-form-tour-caption {
  padding-right: 10px;
  width: 100%;
  height: 285px;
  overflow-y: auto;
  text-align: left;
}
.cz-form-tour-bookmarks-count {
  margin-top: 10px;
  text-align: center;
}
.cz-form-tour-player {
  padding: 5px;
  background-color: #e9e9e9;
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;
  height: 36px;
  width: 70%;
}
.cz-form-tour-player-icon {
  width: 36px;
  height: 36px;
}
/* Tour Player Icons. */
.cz-form-prev-icon {
  background-image: url(../images/tour-prev.png);
}
.cz-form-play-pause-icon[state=play] {
  margin-left: 15px;
  background-image: url(../images/tour-play.png);
}
.cz-form-play-pause-icon[state=pause] {
  margin-left: 15px;
  background-image: url(../images/tour-pause.png);
}
.cz-form-next-icon {
  margin-left: 15px;
  background-image: url(../images/tour-next.png);
}
.cz-form-vol-icon[state=on] {
  margin-left: 15px;
  background-image: url(../images/narration-on.png);
}
.cz-form-vol-icon[state=off] {
  margin-left: 15px;
  background-image: url(../images/narration-off.png);
}
/***********************************************************

                    ListBox Base

***********************************************************/
.cz-listbox {
  margin: 15px 0;
  padding: 10px;
  background-color: #e9e9e9;
  list-style-type: none;
  border: solid 2px #c7c7c7;
  height: 200px;
  overflow: auto;
}
.cz-listbox-nocontainer {
  margin: 15px 0;
  list-style-type: none;
  height: 200px;
  overflow: auto;
}
.cz-listbox-placeholder {
  margin: 5px 10px;
  padding: 10px;
  height: auto;
  border: solid 2px #0464a2;
  background-color: #e9e9e9;
}
.cz-listitem {
  clear: both;
  margin: 5px 10px;
  padding: 10px;
  height: auto;
  background-color: #fff;
  border: solid 2px #c7c7c7;
  background-image: -ms-linear-gradient(bottom, #e9e9e9 0%, #ffffff 100%);
  background-image: -moz-linear-gradient(bottom, #e9e9e9 0%, #ffffff 100%);
  background-image: -o-linear-gradient(bottom, #e9e9e9 0%, #ffffff 100%);
  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #e9e9e9), color-stop(1, #ffffff));
  background-image: -webkit-linear-gradient(bottom, #e9e9e9 0%, #ffffff 100%);
  background-image: linear-gradient(to top, #e9e9e9 0%, #ffffff 100%);
}
.cz-listitem-close-btn {
  width: 10px;
  float: right;
  cursor: pointer;
  font-size: 14px;
}
/***********************************************************

                ContentItem ListBox

***********************************************************/
.cz-contentitem-listitem-icon {
  display: inline-block;
  width: 15%;
}
.cz-contentitem-listitem-icon > img {
  max-width: 100%;
}
.cz-contentitem-listitem-content {
  display: inline-block;
  margin: 0px 5px;
  vertical-align: top;
  width: 75%;
}
.cz-contentitem-listitem-title {
  margin: 0 0 10px 0;
  color: #232323;
  font-size: 12px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}
.cz-contentitem-listitem-descr {
  margin: 0;
  color: #aeaeae;
  font-size: 12px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}
.cz-contentitem-listitem-highlighted {
  margin: 0;
  color: #3bb6f3;
  font-size: 12px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}
.cz-contentitem-listitem-button {
  margin: 0;
  color: #3bb6f3;
  font-size: 12px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: pointer;
  width: auto;
  display: inline;
}

